generated/checkers/gen/AllGen-Uninit-Data-d313eb8b77557a6d5855f42d2234bd592c7b50dd/build_logs/syntax-repair-07/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:318:15: error: ‘const class clang::ento::ProgramState’ has no member named ‘lookup’
  318 |   if (!State->lookup<PartiallyInitAgg>(VD))
      |               ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:318:38: error: expected primary-expression before ‘>’ token
  318 |   if (!State->lookup<PartiallyInitAgg>(VD))
      |                                      ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:318:21: warning: logical not is only applied to the left hand side of comparison [-Wlogical-not-parentheses]
  318 |   if (!State->lookup<PartiallyInitAgg>(VD))
      |                     ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:209:6: warning: ‘void {anonymous}::SAGenTestChecker::markPartiallyInit(clang::ento::ProgramStateRef&, const clang::VarDecl*) const’ defined but not used [-Wunused-function]
  209 | void SAGenTestChecker::markPartiallyInit(ProgramStateRef &State, const VarDecl *VD) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:203:6: warning: ‘void {anonymous}::SAGenTestChecker::markZeroCleared(clang::ento::ProgramStateRef&, const clang::VarDecl*) const’ defined but not used [-Wunused-function]
  203 | void SAGenTestChecker::markZeroCleared(ProgramStateRef &State, const VarDecl *VD) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
